# Khabar-NewsApp

./: README.md  build.gradle  local.properties
app/: build.gradle
app/src/androidTest/java/com/example/newsapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  newsapp.cpp
app/src/main/java/com/example/newsapp/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/example/newsapp/BottomFiles/: BottomNavItemClass.kt  ConstantsData.kt  HomeScreen.kt  NavHostController.kt  ProfileScreen.kt  SearchScreen.kt
app/src/main/java/com/example/newsapp/TalkBackData/: MainViewModel.kt  MainViewModelFactory.kt
app/src/main/java/com/example/newsapp/bookmark/: BookmarkRepo.kt  Dao.kt  Entity.kt  RoomDatabase.kt  ViewModelFactory.kt  databaseModel.kt
app/src/main/java/com/example/newsapp/data/remote/: NewsApi.kt
app/src/main/java/com/example/newsapp/data/repository/: NewsRepositoryImpl.kt
app/src/main/java/com/example/newsapp/di/: AppModule.kt
app/src/main/java/com/example/newsapp/domain/model/: Article.kt  Source.kt
app/src/main/java/com/example/newsapp/domain/repository/: NewsRepository.kt
app/src/main/java/com/example/newsapp/landing/: LandingPage.kt
app/src/main/java/com/example/newsapp/location/: LocationViewModel.kt
app/src/main/java/com/example/newsapp/presentation/: Bookmarkpage.kt
app/src/main/java/com/example/newsapp/presentation/article_screen/: ArticleScreen.kt
app/src/main/java/com/example/newsapp/presentation/component/: BottomNavigationBar.kt  BottomSheetContent.kt  CategoryTabRow.kt  ImageHolder.kt  NewsArticleCard.kt  NewsScreenTopBar.kt  RetryContent.kt  SearchAppBar.kt
app/src/main/java/com/example/newsapp/presentation/news_screen/: Location.kt  NewsScreen.kt  NewsScreenEvent.kt  NewsScreenState.kt  NewsScreenViewModel.kt
app/src/main/java/com/example/newsapp/presentation/theme/: Color.kt  Theme.kt  animation.kt
app/src/main/java/com/example/newsapp/util/: NavGraphSetup.kt  Resource.kt
app/src/main/res/drawable/: kabarlogo.xml
